Fixed box spacing alignment

--- a/output/styles/styles.css
+++ b/output/styles/styles.css
@@ -172,11 +172,11 @@ label {
 /* two option with "or" between them, smaller margin */
 .orcoursetop {
     margin-top: 0;
-    margin-bottom: 12px;
+    margin-bottom: 14px;
 }
 
 .orcoursebottom {
-    margin-top: 12px;
+    margin-top: 14px;
     margin-bottom: 0;
 }
 
